--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
     <!-- https://www.bootstrapcdn.com/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
-    <title>Say Hello again</title>
+    <title>Say Hello</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="outputField" v-if="name"> {{message}}</div>
     </div>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
